# bazel-playground

./: renovate.json
01-scala-tutorial/: .gitignore  BUILD  WORKSPACE  maven_install.json
02-scala-maven/: BUILD  BUILD.bazel  README.md  WORKSPACE  dep-graph.json  maven_install.json  script.sc
02-scala-maven/src/main/java/example/: App.java
02-scala-maven/src/main/resources/: application.conf
02-scala-maven/src/main/scala/example/: BUILD
03-scala-bazel-deps/: dependencies.yaml  update_dependencies.sh
04-scala-test-deps/: README.md  WORKSPACE
05_scala_macro_library/: README.md
06-scala-docker-image/: README.md  WORKSPACE  build.sbt
07-scala-resources/: BUILD  README.md  WORKSPACE
08-javascript/: BUILD  README.md  WORKSPACE  package-lock.json  package.json
08-javascript/src/: index.js  int_list.js  printer.js
09-ts-jest-cra/: README.md  WORKSPACE  package-lock.json  package.json  react_scripts_test.bzl
10-scala-jmx-prometheus-exporter/: BUILD.bazel  README.md  WORKSPACE
11_rules_js_migration/: .gitignore  .npmrc  BUILD  BUILD.bazel  README.md  WORKSPACE  config-overrides.js  package-lock.json  package.json  pnpm-lock.yaml  react_scripts_test.bzl
11_rules_js_migration/java/: Main.java
12-javaagent-docker/: WORKSPACE
12-javaagent-docker/scala/: BUILD  Main.scala  hello.btm
13-bazel-resources/: README.md  WORKSPACE
13-bazel-resources/java/base/: BUILD  base.java
13-bazel-resources/java/foo/: BUILD  foo.java
13-bazel-resources/scala/base/: BUILD  base.scala
13-bazel-resources/scala/foo/: BUILD  foo.scala
14-rules-scalafmt/: README.md  WORKSPACE  scala_rules.bzl
14-rules-scalafmt/example/: BUILD.bazel  Main.scala
15-rules-cra-dir/: .gitignore  README.md  WORKSPACE
15-rules-cra-dir/app/: BUILD.bazel  package-lock.json  package.json  pnpm-lock.yaml
16-scala-gazelle/: WORKSPACE
17-scala-coverage/: .bazelrc  .gitignore  BUILD  WORKSPACE
17-scala-coverage/coverage_local_jacocorunner/: BUILD
18-scala-scoverage/: .gitignore  README.md  WORKSPACE  maven_install.json  scala.bzl
18-scala-scoverage/bazel_scoverage/: BUILD  aggregte.scala
18-scala-scoverage/script/: .gitignore  aggregate.sc
scala-bazel-deps/: BUILD  README.md  WORKSPACE
scala-maven/: BUILD
scala-tutorial/: BUILD  WORKSPACE
(+33 files in other folders)
