load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//app:react-app-rewired/package_json.bzl", "bin")
# load("@npm//app:eslint/package_json.bzl", eslint_bin = "bin")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

bin.react_app_rewired(
    # Note: If you want to change the name make sure you update BUILD_PATH below accordingly
    # https://create-react-app.dev/docs/advanced-configuration/
    name = "cra",
    args = ["build"],
    srcs = [
        ":node_modules/react",
        ":node_modules/react-dom",
        ":node_modules/typescript",
        ":node_modules/react-scripts",
        ":node_modules/web-vitals",
        ":node_modules/@types",
        "//app:package.json",
        "//app:tsconfig.json",
        "//app:config-overrides.js",
    ] + glob(
        [
            "public/*",
            "src/**/*",
        ]
    ),
    chdir = "app",
    env = {
        "BUILD_PATH": "./build",
        "DISABLE_ESLINT_PLUGIN": "true",
    },
    out_dirs = ["build"],
)

pkg_zip(
    name = "react_zip",
    srcs = [":cra"],
    package_file_name = "react.jar",
)

java_import(
    name = "react_jar",
    jars = [":react_zip"],
)

java_binary(
    name = "main",
    main_class = "example.Main",
    srcs = ["java/Main.java"],
    # resources = [":build_result"]
    runtime_deps = ["//app:react_jar"]
)
